weather-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: LoadBalancer
  selector:
    app: weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
